Build 46 wip: rebase onto Canvas 26.2 and strip Rolia to a bare core
New base: CraftCanvasMC/Canvas main @ 6390316 - mcVersion 26.2, channel STABLE, their build #890.
There is no ver/26.2 branch; stable 26.2 is main, and it pins paperRef rather than foliaCommit
because Canvas dropped the Folia upstream and now builds straight on Paper.

What that cost us, measured rather than guessed. Rolia carried edits to 69 Canvas files. In 26.2:
7 are byte-identical, 37 Canvas changed itself, 9 moved to a new path, and 16 no longer exist -
the whole Folia region-threading layer went with the upstream, including AffinitySchedulerThreadPool,
SchedulerUtil, WorldShutdownThread, EnderPearls, TeamData, RegionThreadingWaypointManager, both
Fixup-Region-Threading patches and the spark integration. Roughly half of builds 44-45 lived there.

So this build is what was asked for: stock Canvas 26.2 plus the secret seed, and nothing else.
Deleted rather than ported: Dab.java, Lobotomize.java, every optimization source hook, the /rolia
command, and the Luminol/Pufferfish/SparklyPaper licence files that only existed for those patches.
The 16 orphaned fixes are not carried forward - they repaired optional code that no longer exists.

rolia.yml is down to five keys, all under secure-seed: enabled, salt, feature-seed,
on-secret-mismatch and seed-command. Nothing else is configurable, because nothing else is changed.

Biome climate is now PUBLIC. The multi-noise biome source reads six parameters; continentalness,
erosion and weirdness are the noises terrain is built from and were already public, and depth is
computed from terrain. Only temperature and vegetation were secret - the two that decide snowy peak
versus jungle. They move to the public whitelist, so the biome map is reproducible from the ordinary
level-seed and a seed-finder site shows the right biomes. Surface rules, decorations, carvers,
aquifers, ore, structures, loot and slime chunks keep their independent secret domains, so the map
s